<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uevent_diagnostics_publisher</name>
  <version>0.0.0</version>
  <description>The uevent_diagnostics_publisher package</description>
  <maintainer email="manato.hirabayashi@tier4.jp">Manato Hirabayashi</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
